fix z-index of header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
   height: var(--navbar-height);
   display: flex;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   background-color: var(--background-color);
   width: 100%;
   justify-content: space-between;
