--- a/src/components/PostItem/PostItem.module.scss
+++ b/src/components/PostItem/PostItem.module.scss
@@ -1,17 +1,17 @@
 .post {
   position: relative;
-  transition:  .15s;
+  transition: 0.15s;
   height: 400px;
   border-radius: var(--border-radius-m);
   border: 1px var(--secondary-color) solid;
-  outline-offset:-4px;
+  outline-offset: -4px;
   display: grid;
   overflow: hidden;
   grid-template-rows: 60% 40%;
   gap: 3px;
 
   .panel {
-    transition: .3s;
+    transition: 0.3s;
     z-index: 1;
     position: absolute;
     right: 15px;
@@ -42,7 +42,7 @@
     overflow: hidden;
 
     .image {
-      transition: .2s;
+      transition: 0.2s;
       background-color: var(--secondary-color);
       height: 100%;
       width: 100%;
@@ -53,10 +53,12 @@
     }
   }
 
-  .details, .skeleton {
+  .details,
+  .skeleton {
     padding: 6px 12px;
 
-    .title, .text {
+    .title,
+    .text {
       text-overflow: ellipsis; /* Обрезаем все, что не помещается в область */
       overflow: hidden;
       display: -webkit-box;
@@ -79,20 +81,18 @@
     gap: 7px;
   }
 
-
   &:hover {
     box-shadow: -1px 1px 19px 3px var(--dark-background-color);
     border-color: transparent;
 
-    img{
+    img {
       transform: scale(1.05);
     }
 
     .panel {
-      transition: .2s;
+      transition: 0.2s;
       top: 15px;
       opacity: 1;
     }
   }
 }
-
